# highload

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  pyproject.toml
.deployment/: Dockerfile  docker-compose.postgres.yaml  docker-compose.traefik.yaml  docker-compose.yaml
app/: gunicorn_conf.py  logger.py  main.py  settings.py
app/api/: __init__.py  dependencies.py  router.py
app/api/auth/: __init__.py  logic.py  router.py  schemas.py
app/api/shared/: __init__.py  router.py  schemas.py
app/api/users/: __init__.py  logic.py  router.py  schemas.py
app/services/: __init__.py  auth.py  base.py  postgresql.py  services.py
dev/: README.md  create_db.py  create_tables.py  load_fixtures.py
dev/fixtures/: README.md  cities.csv
postman/: README.md  openapi.json  postman_collection.json
tests/: README.md
